Ecran do cliente

--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -4,7 +4,7 @@
 <br>
 
 <div class="row">
-    <div class="col-md-6 col-lg-6">
+    <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
         <div class="panel panel-default panel-primary">
             <div class="panel-heading ">
                 <h4>Cliente
@@ -25,6 +25,7 @@
                             </li>
                             <li class="divider"></li>
                             <li><a href="#"><i class="fa fa-trash"></i> Delete</a>
+
                             </li>
                         </ul>
                     </span><!-- /.dropdown -->
@@ -44,7 +45,7 @@
                         <div class="col-md-4 col-lg-4">
                             <p>Web</p>
                         </div>
-                        <div class="col-md-8 col-lg-8">
+                        <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
                             <a href="http://{{cliente.cliwww}}">{{cliente.cliwww}}</a>
                         </div>
                     </div>
@@ -68,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 col-lg-6">
+    <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
         <div class="panel panel-default panel-primary">
             <div class="panel-heading">
                 <h4>Localização</h4>
@@ -80,7 +81,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-lg-6">
+    <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
         <div class="panel panel-default panel-primary">
             <div class="panel-heading">
                 <h4>Contratos</h4>
@@ -90,7 +91,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 col-lg-6">
+    <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
         <div class="panel panel-default panel-primary">
             <div class="panel-heading">
                 <h4>Propostas</h4>
