--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -150,7 +150,6 @@
             frm.parsley();
             // bind 'myForm' and provide a simple callback function
             $('#modal_submit').click(function () {
-
                 if(frm.parsley().validate()) {
                     $('#{{ modal_id }}').modal('hide');
                     $.ajax({
@@ -181,7 +180,9 @@
 {{/if}}
 <script>
     $(document).ready(function() {
+        console.log('1111111111');
         $('a').attr('href', function (index, value) {
+            console.log('22222222222');
             if(value=="#"){ return value;}
             var tokenValue = sessionStorage.getItem("token");
             if(tokenValue){
