Alterações para auth

--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -74,8 +74,14 @@
             <div class="panel-heading">
                 <h4>Localização</h4>
             </div>
-            <div class="panel-body">
-                <img src="../img/Mapa.PNG" width="100%"/>
+            <div class="panel-body embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item"
+                        width="600"
+                        height="450"
+                        frameborder="0" style="border:0"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8G1i2Hwt_PIhC7LtRnBWQolyXhPbtjZE
+    &q=AV+DR+MOREIRA+SOUSA" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
