--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -77,10 +77,10 @@
             <div class="panel-body embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item"
                         width="600"
-                        height="450"
+                        height="400"
                         frameborder="0" style="border:0"
                         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8G1i2Hwt_PIhC7LtRnBWQolyXhPbtjZE
-    &q=AV+DR+MOREIRA+SOUSA" allowfullscreen>
+    &q={{map_address}}" allowfullscreen>
                 </iframe>
             </div>
         </div>
