--- a/views/partials/modal-clientes.hbs
+++ b/views/partials/modal-clientes.hbs
@@ -14,12 +14,12 @@
                     <div class="row field-padding">
                         <label class="col-sm-2">Código</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="clinum" disabled/>
+                            <input type="text" class="form-control" id="clinum" value="{{ cliente.clinum }}" disabled/>
                         </div>
                         <label class="radio-inline col-sm-1"><b>Empresa</b></label>
-                        <input class="col-sm-2" type="radio" name="clitcli" value="E" required="" onchange="ehEmpresa()">
+                        <input class="col-sm-2" type="radio" name="clitcli" value="E" required="" {{#if (isEqual cliente.clitcli "E") }} checked {{/if}} onchange="ehEmpresa()">
                         <label class="radio-inline col-sm-1"><b>Particular</b></label>
-                        <input class="col-sm-2" type="radio" name="clitcli" value="P" onchange="ehParticular()">
+                        <input class="col-sm-2" type="radio" name="clitcli" value="P" {{#if (isEqual cliente.clitcli "P") }} checked {{/if}} onchange="ehParticular()">
                     </div>
 
                     <div class="row field-padding">
@@ -28,77 +28,77 @@
 
                             <select class="form-control" id="nacionalidade" name="clipais">
                                 {{#each paises}}
-                                    <option value="{{ codigo }}" {{#if (isEqual ../paisselected codigo) }} selected {{/if}}>{{ nomepais }}</option>
+                                    <option value="{{ codigo }}" {{#if (isEqual ../cliente.clipais codigo) }} selected {{/if}}>{{ nomepais }}</option>
                                 {{/each}}
                             </select>
                         </div>
                         <label class="col-sm-3">NIF</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="nif" name="clinfis"/>
+                            <input type="text" class="form-control" id="nif" name="clinfis" value="{{ cliente.clinfis }}"/>
                         </div>
                     </div>
 
                     <div class="row field-padding">
                         <label class="col-sm-2">Nome</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="nome" name="clinom" required/>
+                            <input type="text" class="form-control" id="nome" name="clinom" value="{{ cliente.clinom }}" required/>
                         </div>
                     </div>
                     <div class="row field-padding">
                         <label class="col-sm-2">Morada</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="morada" name="climor"/>
+                            <input type="text" class="form-control" id="morada" name="climor" value="{{ cliente.climor }}"/>
                         </div>
                     </div>
 
                     <div class="row field-padding">
                         <div class="col-sm-2" ></div>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="morada2" name="climor2"/>
+                            <input type="text" class="form-control" id="morada2" name="climor2" value="{{ cliente.climor2 }}"/>
                         </div>
                     </div>
                     <div class="row field-padding">
                         <div class="col-sm-2" ></div>
                         <div class="col-sm-2">
-                            <input type="text" class="form-control" id="codpostal1" name="clicop" data-parsley-type="digits"/>
+                            <input type="text" class="form-control" id="codpostal1" name="clicop" data-parsley-type="digits" value="{{ cliente.clicop }}"/>
                         </div>
                         <div class="col-sm-2">
-                            <input type="text" class="form-control" id="codpostal2" name="clicop2" data-parsley-type="digits"/>
+                            <input type="text" class="form-control" id="codpostal2" name="clicop2" data-parsley-type="digits" value="{{ cliente.clicop2 }}"/>
                         </div>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" id="localidade" name="cliloc"/>
+                            <input type="text" class="form-control" id="localidade" name="cliloc" value="{{ cliente.cliloc }}"/>
                         </div>
                     </div>
 
                     <div class="row field-padding">
                         <label class="col-sm-2">Email</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="email" name="cliwww" data-parsley-type="email"/>
+                            <input type="text" class="form-control" id="email" name="clitlx" data-parsley-type="email" value="{{ cliente.clitlx }}"/>
                         </div>
                     </div>
                     <div class="row field-padding">
                         <label class="col-sm-2" for="clitlx">Website</label>
                         <div class="col-sm-9 ">
-                            <input type="text" class="form-control" id="website" name="clitlx" data-parsley-type="url"/>
+                            <input type="text" class="form-control" id="website" name="cliwww" data-parsley-type="url" value="{{ cliente.cliwww }}"/>
                         </div>
                     </div>
                     <div class="row field-padding">
                         <label class="col-sm-2">Telefone</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="telefone" name="clitel" data-parsley-type="digits"/>
+                            <input type="text" class="form-control" id="telefone" name="clitel" data-parsley-type="digits" value="{{ cliente.clitel }}"/>
                         </div>
                         <label class="col-sm-3">Nascido a</label>
                         <div class="col-sm-3">
-                            <input type="date" class="form-control" id="datanascimento" name="datanascimento"/>
+                            <input type="date" class="form-control" id="datanascimento" name="datanascimento" value="{{ restocliente.datanascimento }}"/>
                         </div>
                     </div>
 
                     <div class="row field-padding">
                         <div class="col-sm-2"></div>
 
-                        <label style="margin-left:10px" class="checkbox-inline col-sm-2" id="cliehsucursal"><input type="checkbox" value="S" name="cliehsucursal">Sucursal</label>
-                        <label class="checkbox-inline col-sm-2" id="cliivacaixa"><input type="checkbox" value="S" name="cliivacaixa">Iva caixa</label>
-                        <label class="checkbox-inline col-sm-2" id="clibanco"><input type="checkbox" value="S" name="clibanco">Cli Banco</label>
+                        <label style="margin-left:10px" class="checkbox-inline col-sm-2" id="cliehsucursal"><input type="checkbox" value="S" name="cliehsucursal" {{#if cliente.cliehsucursal }}checked{{/if}}>Sucursal</label>
+                        <label class="checkbox-inline col-sm-2" id="cliivacaixa"><input type="checkbox" value="S" name="cliivacaixa" {{#if cliente.cliivacaixa }}checked{{/if}}>Iva caixa</label>
+                        <label class="checkbox-inline col-sm-2" id="clibanco"><input type="checkbox" value="S" name="clibanco" {{#if cliente.clibanco }}checked{{/if}}>Cli Banco</label>
 
                     </div>
                 </form>
