--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -35,7 +35,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-4 col-lg-4">
-                            <p>Nome</p>
+                            <p><strong>Nome</strong></p>
                         </div>
                         <div class="col-md-8 col-lg-8">
                             <p>{{cliente.clinom}}</p>
@@ -43,23 +43,23 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-lg-4">
-                            <p>Web</p>
+                            <p><strong>Web</strong></p>
                         </div>
                         <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
-                            <a href="http://{{cliente.cliwww}}">{{cliente.cliwww}}</a>
+                            <a class="dont-break-out" href="http://{{cliente.cliwww}}">{{cliente.cliwww}}</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-lg-4">
-                            <p>Email</p>
+                            <p><strong>Email</strong></p>
                         </div>
                         <div class="col-md-8 col-lg-8">
-                            <a href="mailto:{{cliente.clitlx}}">{{cliente.clitlx}}</a>
+                            <a class="dont-break-out" href="mailto:{{cliente.clitlx}}">{{cliente.clitlx}}</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-lg-4">
-                            <p>Telefone</p>
+                            <p><strong>Telefone</strong></p>
                         </div>
                         <div class="col-md-8 col-lg-8">
                             <p>{{cliente.clitel}}</p>
