--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -25,7 +25,7 @@
                                 <a href="#">Etcs</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="#"><i class="fa fa-trash"></i> Delete</a>
+                            <li><a href="#" onclick="deleteCliente();"><i class="fa fa-trash"></i> Delete</a>
 
                             </li>
                         </ul>
@@ -110,3 +110,39 @@
     </div>
 </div>
 
+<script>
+    function deleteCliente(){
+        console.log("Vou apagar o cliente {{cliente.clinum}}");
+        var tokenValue = sessionStorage.getItem("token");
+
+        var deleteUrl = '/cliente/{{cliente.clinum}}' + "?auth=" + tokenValue;
+        $.ajax({
+            url: deleteUrl,
+            method: 'DELETE',
+            cache: false,
+            success: function (result) {
+                if(result){
+                    $('#errmsg-header').html("Sucesso");
+                    $('#errmsg-usermsg').html("A operação foi concluida com sucesso.<br> O cliente " + {{ cliente.clinum }} + " foi apagado com sucesso");
+                    $('#errmsg-button').toggleClass('btn-danger btn-success');
+                    $('#errmsg-button').toggleClass('btn-info btn-success');
+                    $('#errmsg-button').click(function(e){
+                        e.preventDefault();
+                        window.location = "/clientes" + "?auth=" + tokenValue;
+                    });
+                    $('#errmsg-dialog').modal('show');
+                } else {
+                    window.location.replace('/login');
+                }
+            },
+            error: function (result) {
+                console.log(result);
+                $('#errmsg-header').html("Erro");
+                $('#errmsg-usermsg').html("Houve um erro na operação: " + result.responseText);
+                $('#errmsg-button').toggleClass('btn-success btn-danger');
+                $('#errmsg-button').toggleClass('btn-info btn-danger');
+                $('#errmsg-dialog').modal('show');
+            }
+        });
+    }
+</script>
