--- a/views/partials/modal-dialog.hbs
+++ b/views/partials/modal-dialog.hbs
@@ -12,7 +12,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" id="errmsg-button" class="btn btn-info" data-dismiss="modal">OK</button>
+                <button type="button" id="errmsg-button" class="btn btn-success" data-dismiss="modal">OK</button>
+                <button type="button" id="errmsg-cancel" class="btn btn-danger hidden" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
     </div>
