--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 
 <div class="col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            Volume de negócio
+    <div class="panel panel-primary">
+        <div class="panel-heading panel-heading-audaxys">
+            <h4>Volume de negócio</h4>
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
@@ -13,13 +13,10 @@
     <!-- /.panel -->
 </div>
 
-
-
-
 <div class="col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            Condições Climáticas
+    <div class="panel panel-primary">
+        <div class="panel-heading panel-heading-audaxys">
+            <h4>Condições Climáticas</h4>
         </div>
         <div class="panel-body">
             <div id="c_7c4a40800ade910c1b55b7feabaab39c" class="ancho"><h2
