--- a/views/simul.hbs
+++ b/views/simul.hbs
@@ -1,7 +1,138 @@
-<div class="col-lg-12" style="margin-top:48px; text-align: center">
-    <div class="jumbotron">
-        <h1>Não implementado</h1>
-        <p>Esta funcionalidade só será implementada na última fase do projecto.</p>
-        </p>
-    </div>
+
+    <div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading panel-heading-audaxys">
+                <h4>Simulador</h4>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+                <ul class="breadcrumb">
+                    <li><a href="/">Home</a></li>
+                    <li class="active">Simulação</li>
+                </ul>
+                <form class="form-horizontal" name="simul_form" id="simul_form" action="" method="POST" data-parsley-validate="" data-parsley-trigger="change">
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">Data Início</label>
+                        <div class="col-sm-3">
+                            <input type="date" class="form-control" id="cto2dat" value="" />
+                        </div>
+                        <label class="col-sm-2">Valor</label>
+                        <div class="col-sm-3">
+                            <input type="number" step="0.01" class="form-control" id="ctotcon" value="" />
+                        </div>
+                    </div>
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">Prazo</label>
+                        <div class="col-sm-3">
+                            <input type="number" class="form-control" id="ctopraz" value="" />
+                        </div>
+                        <label class="col-sm-2">Período</label>
+                        <div class="col-sm-3">
+                            <input type="number" min="1" max="12" class="form-control" id="ctoper" value="" />
+                        </div>
+                    </div>
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">A/P</label>
+<div class="col-sm-3">
+                            <label class="radio-inline "><b>Antecipado</b></label>
+                            <input  type="radio" name="ctoap" value="A" required="" checked onchange="">
+                            <label class="radio-inline "><b>Postecipado</b></label>
+                            <input  type="radio" name="ctoap" value="P"  onchange="">
 </div>
+                        <label class="col-sm-2">IVA</label>
+                        <div class="col-sm-3">
+                            <select class="form-control" id="ctoiva" name="ctoiva">
+                                <option value="23" selected >23%</option>
+                                <option value="5" selected >5%</option>
+                                <option value="0" selected >0%</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">Data 1ª renda</label>
+                        <div class="col-sm-3">
+                            <input type="date" class="form-control" id="cto1ren" value="" />
+                        </div>
+                        <label class="col-sm-2">Juros Diferidos</label>
+                        <div class="col-sm-3">
+                            <select class="form-control" id="ctojurdif" name="ctojurdif">
+                                <option value="C" selected >Calcula</option>
+                                <option value="S" >Impõe Valor</option>
+                                <option value="N" >Não tem</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">Dado</label>
+                        <div class="col-sm-3">
+                            <select class="form-control" id="ctodado" name="ctodado">
+                                <option value="T" selected >Taxa</option>
+                                <option value="R" >Rendas</option>
+                            </select>
+                        </div>
+                        <label class="col-sm-2">Valor Juros Diferidos</label>
+                        <div class="col-sm-3">
+                            <input type="number" step="0.01" class="form-control" id="ctovaljurdif" value="" />
+                        </div>
+
+                    </div>
+
+                    <div class="row field-padding">
+                        <label class="col-sm-2">Taxa</label>
+                        <div class="col-sm-3">
+                            <input type="number" step="0.01" class="form-control" id="ctotxim" value="" />
+                        </div>
+
+                    </div>
+                </form>
+                <br>
+                <div class="row">
+                    <div class="col-sm-7">
+                        <div class="panel panel-info">
+                            <div class="panel-heading panel-heading-audaxys">Grupos de Rendas</div>
+                            <!-- /.panel-heading -->
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th name="qtd">Qtd</th>
+                                        <th>Valor</th>
+                                        <th>Factor</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><input class="form-control" type="number" id="qtd1" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="valor1" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="factor1" value="" /></td>
+                                    </tr>
+                                    <tr>
+                                        <td><input class="form-control" type="number" id="qtd2" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="valor2" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="factor2" value="" /></td>
+                                    </tr>
+                                    <tr>
+                                        <td><input class="form-control" type="number" id="qtd3" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="valor3" value="" /></td>
+                                        <td><input class="form-control" type="number" step="0.01" id="factor3" value="" /></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="btn-group-vertical" role="group" aria-label="...">
+                        <button type="button" id="ok_button" class="btn btn-info" value="validate">OK</button>
+                        <button type="button" id="calc_button" class="btn btn-default" >Calcula</button>
+                        <button type="button" id="cashflow_button" class="btn btn-default" >CashFlow</button>
+                        <button type="button" id="modifica_button" class="btn btn-default" >Modifica</button>
+                    </div>
+                </div>
+        </div>
+        </div>
+    </div>
+    </div>
